[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-knowledge-core"
version = "0.1.0"
description = "A lightweight, Git-native router for sharing scoped skills and long-term memory across coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "agent-knowledge contributors" }
]
keywords = ["agents", "skills", "memory", "codex", "claude"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]

[project.scripts]
ak-core = "agent_knowledge_core.cli:main"
